--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -8,7 +8,13 @@ body{
 	-o-background-size: cover;
 	background-size: cover;
 	background-color:;
+	margin-top:80px;
 }
+
+.glyphicon { margin-right:10px; }
+.panel-body { padding:0px; }
+.panel-body table tr td { padding-left: 15px }
+.panel-body .table {margin-bottom: 0px; }
 
 
 .pagina{
