--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -10,6 +10,9 @@ body{
 	background-color:;
 	margin-top:80px;
 }
+.columns{
+	background:red;
+}
 
 .glyphicon { margin-right:10px; }
 .panel-body { padding:0px; }
